--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./assets/css/run-buddy.css" />
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
     </head>
     <body>
        <!-- navigation -->
         <header>
-        <h1>RUN BUDDY</h1>
+        <h1>
+            <a href="/">RUN BUDDY</a>
+        </h1>
         <nav>
             <!-- Unordered List-->
             <ul>
