--- a/index.html
+++ b/index.html
@@ -33,7 +33,34 @@
         </header>
         <!-- hero/jumbotron -->
         <section>
-
+            <div>
+                    <h3>Get Started Today</h3>
+                    <p>Fill out this form nad one of our trainers will schedule a consult</p>
+                    <form>
+                        <label for="name">Enter full name:</label>
+                        <input type="text" placeholder="Your Name" name="name" id="name" />
+                        <label for="email">Enter email address:</label>
+                        <input type="email" placeholder="E-mail Address" name="email" id="email" />
+                        <label for="phone">Enter a telephone number</label>
+                        <input type="tel" placeholder="Phone Number" name="phone" id="phone" />
+                        <p>
+                            Have you worked with a trainer before?
+                            <input type="radio" name="trainer-confirm" id="trainer-yes" />
+                            <label for="trainer-yes">Yes</label>
+                            <input type="radio" name="trainer-confirm" id="trainer-no" />
+                            <label for="trainer-no">No</label>
+                        </p>
+                        <p>
+                            <label for="checkbox" >
+                            I acknoweldge I am at least 18 years of age.
+                            </label>
+                            <input type="checkbox" name="age-confirm" id="checkbox" />
+                        </p>
+                        <button type="submit">
+                            Get running!
+                        </button>
+                    </form>
+            </div>
         </section>
         <!-- "what we do" section -->
         <section>
@@ -54,6 +81,10 @@
         <!-- footer -->
         <footer>
             <h2>❤️ Made with love by Run Buddy</h2>
+            <div>
+                <a href="#">Read Our Privacy Policy</a><br />
+                &copy; 2019 Run Buddy, Inc.
+            </div>
         </footer>
     </body>
 
