--- a/index.html
+++ b/index.html
@@ -95,8 +95,32 @@
         </div>
         </section>
         <!-- "meet the trainers" section -->
-        <section id="meet-the-trainers">
-        <h2>Your Trainers</h2>
+        <section id="your-trainers" class="trainers">
+        <h2 class="section-title primary-border">Meet the Trainers</h2>
+        <article class="trainer">
+            <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+            <div class="trainer-bio text-left" >
+                <h3>Arron Stephens</h3>
+                <h4>Speed / Strength</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum autem quod sit consectetur dicta consequuntur blanditiis odit! Qui, distinctio laboriosam alias deleniti, fuga consectetur incidunt nihil hic, explicabo accusamus rem.</p>
+            </div>
+        </article>
+        <article class="trainer">
+            <div class="trainer-bio text-right" >
+                <h3>Joanna Gill</h3>
+                <h4>Endurance</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum autem quod sit consectetur dicta consequuntur blanditiis odit! Qui, distinctio laboriosam alias deleniti, fuga consectetur incidunt nihil hic, explicabo accusamus rem.</p>
+            </div>
+            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+        </article>
+        <article class="trainer">
+            <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+            <div class="trainer-bio text-left" >
+                <h3>Harry "the Headband" Smith</h3>
+                <h4>Strength</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum autem quod sit consectetur dicta consequuntur blanditiis odit! Qui, distinctio laboriosam alias deleniti, fuga consectetur incidunt nihil hic, explicabo accusamus rem.</p>
+            </div>
+        </article>
         </section>
         <!-- "reach out" section -->
         <section id="reach-out">
