--- a/index.html
+++ b/index.html
@@ -125,6 +125,27 @@
         <!-- "reach out" section -->
         <section id="reach-out">
             <h2>Reach out</h2>
+            <div class="contact-info">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1800.8543979321237!2d-111.98016387179717!3d40.61523601086219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87528eea3e555555%3A0x349c571e34fa3818!2sPlanet%20Fitness%20West%20Jordan%2C%20UT!5e0!3m2!1sen!2sus!4v1623440066985!5m2!1sen!2sus" 
+                width="400" 
+                height="400" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy">
+            </iframe>
+                <h3>Run Buddy</h3>
+                <p>Any questions or concerns?
+                <br />
+                Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 main street <br>
+                    Some Town, CA <br>
+                    12345 <br>
+                    P: 555.RUN.BUDZ (555.786.2839) <br>
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy</a>
+                </address>
+            </div>
         </section>
         <!-- footer -->
         <footer>
