--- a/index.html
+++ b/index.html
@@ -68,15 +68,18 @@
         </section>
         <!-- "what we do" section -->
         <section id="what-we-do" class="intro">
-
-        <h2 class="section-title primary-border">What We Do</h2>
+            <div class="flex-row"></div>
+             <h2 class="section-title primary-border">What We Do</h2>
             <p>butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft</p>
+        </div>
         </section>
         <!-- "what you do" section -->
         <section id="what-you-do" class="steps">  
                         <!--insert step 1 icon-->
                         <img src="./assets/images/step-1.svg" alt="" />
+         <div class="flex-row">                
         <h2 class="section-title secondary-border">What You Do</h2>
+         </div>
         <div>
             
             <h3>Step 1:<span>Fill Out the Form Above.</span> </h3>
@@ -100,7 +103,9 @@
         </section>
         <!-- "meet the trainers" section -->
         <section id="your-trainers" class="trainers">
+            <div class="flex-row">
         <h2 class="section-title primary-border">Meet the Trainers</h2>
+        </div>
         <article class="trainer">
             <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
             <div class="trainer-bio text-left" >
@@ -128,7 +133,9 @@
         </section>
         <!-- "reach out" section -->
         <section id="reach-out" class="reach-out">
+            <div class="flex-row">
             <h2 class="section-title secondary-border">Reach out</h2>
+            </div>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1800.8543979321237!2d-111.98016387179717!3d40.61523601086219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87528eea3e555555%3A0x349c571e34fa3818!2sPlanet%20Fitness%20West%20Jordan%2C%20UT!5e0!3m2!1sen!2sus!4v1623440066985!5m2!1sen!2sus"  
                 style="border:0;" 
